src/assets/styles/app.scss
@import "variable";
@import "ks-theme-light";
@import "ks-theme-dark";
@import "layout";

::view-transition-old(root),
::view-transition-new(root) {
    animation: none;
}

html {
    height: 100%;
    scroll-padding-top: var(--top-bar-height);
}

pre {
    color: var(--ks-content-primary);
}

body {
    min-width: 320px;
    min-height: 100%;
    position: relative;
    background-color: var(--ks-background-body);
    color: var(--ks-content-primary);

    &::after {
        content: "";
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100vw;
        height: 100px;
        background: rgba(var(--ks-background-body), 0.06);
        backdrop-filter: blur(2px);
        z-index: 10;
        pointer-events: none;
        mask-image: linear-gradient(
            180deg,
            transparent 0%,
            var(--ks-content-primary) 100%
        );
        -webkit-mask-image: linear-gradient(
            180deg,
            transparent 0%,
            var(--ks-content-primary) 100%
        );
    }

    &.has-annonces {
        padding-top: 46px;

        #top-bar {
            top: 46px;
        }
    }
}

.headers-body-bg {
    background: #111113 !important;
}

:root {
    --spacer: #{$spacer};
    --bs-link-color-rgb: var(--ks-content-link);
    --#{$prefix}font-size-lg: #{$font-size-lg};
    --#{$prefix}font-size-sm: #{$font-size-sm};
}

@each $breakpoint, $container-max-width in $container-max-widths {
    @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
        .container-min {
            min-width: $container-max-width;
        }
    }
}

.container {
    @include media-breakpoint-up(xl) {
        max-width: 1140px;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 600;
}

@include media-breakpoint-down(lg) {
    h1 {
        font-size: $h3-font-size;
    }
    h2 {
        font-size: $h3-font-size;
    }
    h3 {
        font-size: $h4-font-size;
    }
    h4 {
        font-size: $h5-font-size;
    }
    h5 {
        font-size: $h6-font-size;
    }
    h6 {
        font-size: $font-size-sm;
    }
}

main {
    padding-top: 67px;

    > div {
        overflow-x: hidden;
    }
}

// astro image
:where([data-astro-image]) {
    object-fit: var(--fit);
    object-position: var(--pos);
}

:where([data-astro-image="full-width"]) {
    width: 100%;
    height: auto;
}

:where([data-astro-image="constrained"]) {
    max-width: 100%;
    height: auto;
}

// bootstrap
table.table {
    thead {
        border-bottom: 2px solid var(--ks-content-primary);
    }
}

.alert {
    > *:last-child {
        margin-bottom: 0;
    }
}

blockquote.blockquote {
    border-left: 4px solid var(--ks-content-secondary);
    padding-left: $spacer;
    color: var(--ks-content-secondary);
    font-size: 1rem;
}

.btn {
    font-weight: bold;
    border: 0;
    border-radius: $border-radius-lg;
}

.btn:not(.btn-lg):not(.btn-sm) {
    padding: 0.75rem 1.5rem;
    font-weight: bold;
}

.btn.btn-lg {
    padding: 1.2rem 2rem;
}

.btn.btn-sm {
    padding: 0.375rem 1rem;
}

.modal-full {
    .modal-dialog {
        width: 95%;
        max-width: none;
    }
}

@keyframes rotate {
    100% {
        transform: rotate(1turn);
    }
}

.btn-primary {
    background:
        linear-gradient(var(--ks-background-button-primary), var(--ks-background-button-primary)) padding-box,
        linear-gradient(262.72deg, #FFFFFF 15.19%, #E8C8C8 37.92%, #838383 76.01%) border-box;
    color: $white !important;
    position: relative;
    border: 1px solid transparent;
    border-radius: $border-radius-lg;
    &:not(.btn-sm) {
        box-shadow:
            0px 0px 14px 0px #BE62FF inset,
            2px 2px 11px 0px #0000001A;
    }

    &:hover {
        background:
            linear-gradient(var(--ks-background-button-primary-hover), var(--ks-background-button-primary-hover)) padding-box,
            linear-gradient(90deg, #EFF4FF 0%, #8F9299 100%) border-box;
        border: 1px solid transparent;

        // html.light & {
        //     color: $black !important;
        // }
    }
}

.btn-secondary {
    background-color: var(--ks-background-button-secondary);
    color: var(--ks-content-primary) !important;
    border: 1px solid var(--ks-border-button-secondary);

    &:hover {
        background: var(--ks-background-button-secondary-hover) !important;
        color: var(--ks-content-btn-secondary-hover) !important;
    }
}

.btn.btn-primary,
.btn.btn-secondary {
    font-weight: 700;
    line-height: 1.5;
    &.btn-md {
        padding: 0.5rem 1rem;
        font-size: $font-size-base;
        border-radius: $border-radius;
    }
    &.btn-lg {
        padding: 0.8rem 1.6rem;
        font-size: $font-size-lg;
        border-radius: $border-radius-lg;
        @include media-breakpoint-down(lg) {
            padding: 0.5rem 1.5rem;
            font-size: $font-size-base;
            border-radius: $border-radius;
        }
    }
}

.btn-animated {
    --border-size: 1px;
    position: relative;
    z-index: 0;
    overflow: hidden;
    border: 0;
    color: #fff;

    &::before {
        content: "";
        position: absolute;
        z-index: -2;
        left: -50%;
        top: -300%;
        width: 200%;
        height: 760%;
        animation: rotate 6s linear infinite;
    }

    &:active {
        color: #fff;
    }

    &:hover {
        color: #fff;

        &::before {
            animation-duration: 1.5s;
        }
    }

    &::after {
        content: "";
        position: absolute;
        z-index: -1;
        left: 1px;
        top: 1px;
        width: calc(100% - 2px);
        height: calc(100% - 2px);
        background: #0a0113;
        border-radius: $border-radius-lg;
        transition: background-color 0.2s ease;
    }
}
/* ... */

